# wk_platform

./: .gitignore  MANIFEST.in  README.en.md  README.md  pyproject.toml
demo/: weight_strategy.py
src/wk_analyzer/plot/: backtest.py
src/wk_analyzer/risk/: brinson.py  multifactor.py
src/wk_data/: __init__.py  constants.py  data_shard.py  data_source.py  data_spec.py  db_util.py  dispatcher.py  exceptions.py  mappings.py  proc_util.py
src/wk_data/data/: __init__.py  mr_data.py  stock_conversion.csv  trade_calendar.py
src/wk_data/dialect/: rqdata.py
src/wk_data/local_data/: dummy_data.py
src/wk_data/wind_data/: a_share_market.py  index_daily_status.py  index_date_mapping.py
src/wk_platform/: __init__.py
src/wk_platform/backtest/: __init__.py  analyzer.py  benchmark.py  getBenchmarkFromWind.py  result.py  strategyOutput.py  util.py
src/wk_platform/bar/: base_bar.py
src/wk_platform/barfeed/: __init__.py  membf.py
src/wk_platform/broker/: __init__.py  commission.py  fillstrategy.py  order.py  slippage.py
src/wk_platform/cn/: bar.py
src/wk_platform/config/: __init__.py  config.py  enums.py
src/wk_platform/contrib/: __init__.py  batch_strategy.py  data.py  util.py
src/wk_platform/dataframeFeed/: __init__.py  dataFrameBarfeed.py  data_frame_feed.py
src/wk_platform/feed/: __init__.py  bar.py  csvfeed.py  fast_feed.py  mixed_feed.py  parser.py  windfeed.py  (+1 more)
src/wk_plot/: __init__.py
src/wk_util/: algo.py  configuration.py  data.py  data_parser.py  file_digest.py  logger.py  metaclass.py  mixins.py  placeholder.py  recorder.py  result.py  tqdm.py
(+60 files in other folders)
